# travel-agency-erpnext

./: .gitignore  README.md
deploy/: .env.example
docs/: architecture.md  data-import.md  local-setup.md
scripts/: check-local-env.ps1  git-credential-gh-token  install-travel-agency-demo.ps1  start-erpnext-demo.ps1  stop-erpnext-demo.ps1  verify_reports_demo.py  (+9 more)
src/travel_agency/: README.md  license.txt  pyproject.toml
src/travel_agency/travel_agency/: __init__.py  hooks.py  setup.py
src/travel_agency/travel_agency/translations/: zh.csv
src/travel_agency/travel_agency/travel_agency/doctype/supplier_payment_record/: supplier_payment_record.js  supplier_payment_record.json  supplier_payment_record.py
src/travel_agency/travel_agency/travel_agency/doctype/tour_cost_item/: tour_cost_item.js  tour_cost_item.json  tour_cost_item.py
src/travel_agency/travel_agency/travel_agency/doctype/tour_order/: tour_order.js  tour_order.json  tour_order.py  tour_order_list.js
src/travel_agency/travel_agency/travel_agency/doctype/tour_payment_ledger/: tour_payment_ledger.js  tour_payment_ledger.json  tour_payment_ledger.py
src/travel_agency/travel_agency/travel_agency/report/receivable_payable_summary/: receivable_payable_summary.js  receivable_payable_summary.json  receivable_payable_summary.py
src/travel_agency/travel_agency/travel_agency/report/tour_order_profit_report/: tour_order_profit_report.js  tour_order_profit_report.json  tour_order_profit_report.py
src/travel_agency/travel_agency/travel_agency/workspace/travel_agency_management/: travel_agency_management.json
(+6 files in other folders)
