[project]
name = "travel_agency"
version = "0.0.1"
description = "Travel agency management customizations for ERPNext"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "JQQQQQQQ", email = "admin@example.com" }
]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
